# education-hub-core

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
app/: main.py
app/config/: config.py
app/core/: application.py
app/database/: connection.py
app/mq/: rabbit_manager.py
app/util/: logger.py
