[tool.uv]
managed = true
package = false

[project]
name = "education-hub-core"
version = "1.0.0"
description = "Core system for Education Hub"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic", 
    "pydantic-settings",
    "loguru",
    "psycopg[binary,pool]",
    "sqlmodel"
]

[project.optional-dependencies]
dev = [
    "pytest", 
    "black", 
    "ruff"
]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
fixable = ["ALL"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"